propose rest api change due to keycloack and frontend, currently services, controllers and its tests need fixing